# llvm-pass-hands-on

./: README.md
FunctionInfo/: CMakeLists.txt  conv_ll.sh  opt_ll.sh
FunctionInfo/lib/: FunctionInfo.cpp
FunctionInfo/test/: Fibonacci-mem2reg.ll  Fibonacci-mod.ll  Fibonacci.bc  Fibonacci.c  Fibonacci.ll  Loop-mem2reg.ll  Loop-mod.ll  Loop.bc  Loop.ll
LocalOpts/: CMakeLists.txt  opt_ll.sh
LocalOpts/lib/: 1-AlgebraicIdentity.cpp  2-StrengthReduction.cpp  3-ConstantFoldOpt.cpp  CMakeLists.txt
LocalOpts/test/: algebric-mem2reg.ll  algebric-mod.ll  algebric.bc  algebric.c  algebric.ll  constfold-mem2reg.ll  constfold-mod.ll  constfold.bc  constfold.c  constfold.ll  strength-mem2reg.ll  strength-mod.ll  strength.bc  strength.ll
